--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,14 @@
 server.port=9000
 
 # Database configuration
-spring.datasource.url=mysql://localhost:3306/courses
+spring.datasource.url=jdbc:mysql://localhost:3306/commerce
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hibernate configurations
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 
